--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
   <li>Cheese and crackers</li>
   <li>Sushi</li>
 </ul>
+
+<ul>
+  <li>4 slices of cheese</li>
+  <li>1 tbsp of butter</li>
+  <li>cheddar</li>
+  <li>mozzarella</li>
+  <li>pepper jack</li>
+</ul>
   
 </body>
 </html>
