--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 </ul>
 
 <ul>
-  <li>4 slices of cheese</li>
+  <li>4 slices of cheese
+  </li>
   <li>1 tbsp of butter</li>
-  <li>cheddar</li>
-  <li>mozzarella</li>
-  <li>pepper jack</li>
 </ul>
   
 </body>
