--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
   <title>Lists Lab</title>
 </head>
 <body>
+  
+  <ul>
+  <li>Ham and Cheese</li>
+  <li>Grilled Cheese</li>
+  <li>Nacho Cheese French Fries</li>
+  <li>Cheese soup</li>
+  <li>Cheese and crackers</li>
+  <li>Sushi</li>
+</ul>
 
-  <!-- Write your HTML in this file -->
+<ul>
+  <li>4 slices of cheese
+  <ul>
+  <li>cheddar</li>
+  <li>mozzarella</li>
+  <li>pepper jack</li> 
+  </ul>
+  </li>
 
+  <li>1 tbsp of butter</li>
+</ul>
+
+Steps to making a basic grilled cheese
+<ol>
+  <li>Spread butter on bread and frying pan</li>
+  <li>Place bread in rying pan and fry</li>
+  <li>Add cheese on top of bread</li>
+  <li>Cover bread with second slice of bread</li>
+  <li>Turn over and fry for 2 minutes</li>
+</ol>
+  
 </body>
 </html>
